crates/toml_edit/tests/fixtures/invalid/datetime/impossible-date.stderr
TOML parse error at line 2, column 13
  |
2 | d = 2006-01-50T00:00:00Z
  |             ^
Invalid date-time
Value is out of range
